--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,7 +8,7 @@
 }
 
 body{
-  background-color: $gray2 !important;
+  background-color: $light-gray !important;
 }
 
 .home {
@@ -36,11 +36,13 @@ nav.navbar{
   height: 300px;
 }
 
-.left.carousel-control, .right.carousel-control{
+.left.carousel-control,
+.right.carousel-control{
   display: none;
 }
 
-.carousel:hover .left.carousel-control, .carousel:hover .right.carousel-control{
+.carousel:hover .left.carousel-control,
+.carousel:hover .right.carousel-control{
   display: block;
 }
 
@@ -50,13 +52,11 @@ nav.navbar{
   float: left;
 }
 
-/*slideshow*/
 
 .mySlides {display: none}
 
 img {vertical-align: middle;}
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   width: 158px;
@@ -75,7 +75,6 @@ img {vertical-align: middle;}
   font-weight: bold;
 }
 
-/* Fading animation */
 .fade_slide {
   -webkit-animation-name: fade_slide;
   -webkit-animation-duration: 1.5s;
@@ -93,7 +92,6 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 
-/* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next, .text {font-size: 11px}
 }
@@ -114,8 +112,6 @@ img {vertical-align: middle;}
   margin-top: 60px;
   margin-left: 15px;
 }
-
-/*hot sale*/
 
 .hot-sale{
   background-color: white;
@@ -159,8 +155,6 @@ img {vertical-align: middle;}
   font-size: 11px !important;
 }
 
-/*hot-phone*/
-
 .hot-phone, .hot-tablet, .phukien {
   background-color: white;
   margin: 10px 0 0 10px;
@@ -177,21 +171,19 @@ img {vertical-align: middle;}
   font-weight: bold;
 }
 
-li{
+.nav.navbar-nav li{
   float: left;
   list-style: none;
   margin-right: 25px;
   font-size: 16px;
 }
 
-li a:hover{
+.nav.navbar-nav li a:hover{
   text-decoration: none;
 }
 
-/*hot-product*/
 .hot-product-top, .phone-product-bottom{
   height: 318px;
-/*   margin: 10px; */
 }
 
 .phone-product-left{
@@ -333,8 +325,6 @@ label.discount:before{
   bottom: 110px;
 }
 
-/*back_top*/
-
 #scroll_top{
   display: none;
   z-index: 99;
@@ -433,14 +423,100 @@ footer .fa-google:hover{color: $red2; opacity: 1;}
   height: 310px;
 }
 
-.hot-tablet .phone-product-left, .hot-phone .phone-product-left{
+.hot-tablet .phone-product-left,
+.hot-phone .phone-product-left{
   border-left: none;
 }
 
-.hot-tablet .phone-product-right:last-child, .hot-phone .phone-product-right:last-child{
+.hot-tablet .phone-product-right:last-child,
+.hot-phone .phone-product-right:last-child{
   border-right: none;
 }
 
 .increase_margin_top{
   margin-top: 80px;
+  color: black;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+div#signup-tab .sign-up:hover{
+  opacity: 0.8;
+}
+
+.navbar.navbar-fixed-top{
+  background-color: $yellow2;
+  height: 0;
+}
+
+.navbar.navbar-fixed-top .nav.navbar-nav a,
+.navbar.navbar-fixed-top .navbar-brand{
+  color: black;
+}
+
+.navbar.navbar-fixed-top .nav.navbar-nav a:hover{
+  background-color: $light-gray;
+}
+
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+input,
+textarea,
+select,
+.uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
+
+#myNavbar .nav.navbar-nav li{
+  margin-left: -25px;
+}
+
+#myNavbar .nav.navbar-nav li:first-child,
+#myNavbar .nav.navbar-nav li#signin{
+  margin-left: 0;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 20px;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
+.glyphicon-shopping-cart{
+  font-size: 30px;
+  color: black;
+  margin-top: 8px;
+  margin-left: 30px;
+}
+
+.badge{
+  margin-bottom: 12px;
+  margin-right: 10px;
+  background-color: black;
+}
+
+.alert {
+  margin-top: 60px;
+  margin-bottom: 10px;
 }
