--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
-    <div class="home">
-      <%= yield %>
-    </div>
-    <%= render "layouts/footer" %>
+  <%= render "layouts/header" %>
+  <div class="home">
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
+    <%= yield %>
+  </div>
+  <%= render "layouts/footer" %>
   </body>
 </html>
