admin and CRUD products

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -1,6 +1,7 @@
 $light-gray: #f0f0f0;
-$gray1: #c1b4b4;
+$gray1: #ededed;
 $gray2: #cac2c2;
+$gray3: #bbb;
 $pink1: #FF005C;
 $orange1: #ff9c00;
 $orange2: #FF8500;
