--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,17 +100,11 @@ img {vertical-align: middle;}
   width: 400px;
   height: 250px;
   float: left;
+  margin-top: 60px;
 }
 
 .advertise img {
-  margin: 0 0 20px 15px;
-}
-
-.cart{
-  width: 400px;
-  float: left;
-  margin-top: 60px;
-  margin-left: 15px;
+  margin: 0 0 12px 15px;
 }
 
 .hot-sale{
@@ -469,7 +463,7 @@ input,
 textarea,
 select,
 .uneditable-input {
-  border: 1px solid #bbb;
+  border: 1px solid $gray3;
   width: 100%;
   margin-bottom: 15px;
   @include box_sizing;
@@ -519,4 +513,112 @@ input {
 .alert {
   margin-top: 60px;
   margin-bottom: 10px;
+}
+
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
+aside {
+  section.user_info {
+    margin: 20px 25px 0 8px;
+  }
+  section {
+    padding: 10px 0;
+    margin-top: 20px;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
+  }
+}
+
+.dropdown-menu {
+  background-color: $light-gray !important;
+}
+
+.dropdown-menu li:hover{
+  font-weight: bold;
+  background-color: none !important;
+}
+
+.navbar-right .dropdown-menu {
+  padding-left: 25px;
+}
+
+.users {
+  list-style: none;
+  margin: 0 10px 0 10px;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
+
+span.glyphicon.glyphicon-briefcase,
+.manager {
+  margin-left: -25px;
+}
+
+.navbar-brand{
+  background-color: black;
+  width: 200px;
+}
+
+.navbar-brand img {
+  height: 120px;
+  width: 200px;
+  position: absolute;
+  top: -36px;
+  left: 0;
+}
+
+.input-group-btn:last-child > .btn {
+  margin-right: 20px;
+}
+
+.zoom-images{
+  opacity: 0;
+  transition: 1s ease;
+}
+
+.table > thead:first-child > tr:first-child > th {
+  text-align: center;
+  font-size: 17px;
+}
+
+.table-striped > tbody > tr:nth-child(odd) > td {
+  text-align: center;
+}
+
+.table-bordered > tbody > tr > td {
+  text-align: center;
+}
+
+div.well.manager{
+  margin-left: 10px;
+  margin-right: 25px;
 }
