--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, "Trang chủ" %>
+<% provide :title, t("static_pages.home.title") %>
   <div class="box">
     <!-- slideshow -->
     <div class="slideshow">
@@ -44,16 +44,10 @@
       </div>
     </div>
 
-    <div class="cart">
-      <div class="panel panel-default">
-        <div class="panel-heading">Giỏ hàng</div>
-        <div class="panel-body">Chưa có gì trong giỏ hàng</div>
-      </div>
-    </div> <!-- end cart -->
-
     <div class="advertise">
-      <a href="#"><img src="images/products/15_07_2018_20_28_15_iPhone-X-398-110.png" alt="Advertise"></a>
-      <a href="#"><img src="images/products/14_07_2018.png" alt="Advertise"></a>
+      <a href="#"><img src="images/advertise1.png" alt="Advertise"></a>
+      <a href="#"><img src="images/advertise2.png" alt="Advertise"></a>
+      <a href="#"><img src="images/advertise3.png" alt="Advertise"></a>
     </div> <!-- end advertise -->
 
     <div class="hot-phone">
@@ -111,7 +105,9 @@
 
         <div class="phone-product-bottom">
           <div class="phone-product-left rebase-border">
-            <a href="#"><img src="images/products/samsung-galaxy-j7-plus.jpg" alt="Samsung"></a>
+            <div class="zoom-images">
+              <a href="#"><img src="images/products/samsung-galaxy-j7-plus.jpg" alt="Samsung"></a>
+            </div>
             <div class="phone-product-title">
               <div class="phone-title-left">
                 <span>Galaxy J7+</span><br>
@@ -122,7 +118,9 @@
           </div>
           <div class="phone-product-right rebase-border">
             <div class="phone-product-right-top">
-              <a href="#"><img src="images/products/oppo-a83.jpg" alt="Samsung"></a>
+              <div class="zoom-images">
+                <a href="#"><img src="images/products/oppo-a83.jpg" alt="Samsung"></a>
+              </div>
               <label class="label-left discount">Giảm 500.000đ</label>
             </div>
             <div class="phone-product-right-title">
@@ -133,7 +131,9 @@
           </div> <!-- phone-product-right -->
           <div class="phone-product-right rebase-border">
             <div class="phone-product-right-top">
-              <a href="#"><img src="images/products/vivo-y71.jpg" alt="Samsung"></a>
+              <div class="zoom-images">
+                <a href="#"><img src="images/products/vivo-y71.jpg" alt="Samsung"></a>
+              </div>
               <span class="pay">Trả góp 0%</span>
             </div>
             <div class="phone-product-right-title">
@@ -144,7 +144,9 @@
           </div> <!-- phone-product-right -->
           <div class="phone-product-right rebase-border">
             <div class="phone-product-right-top">
-              <a href="#"><img src="images/products/samsung-galaxy-a6-plus-2018.jpg" alt="Samsung"></a>
+              <div class="zoom-images">  
+                <a href="#"><img src="images/products/samsung-galaxy-a6-plus-2018.jpg" alt="Samsung"></a>
+              </div>
               <span class="pay">Trả góp 0%</span>
             </div>
             <div class="phone-product-right-title">
@@ -165,7 +167,9 @@
       <div class="hot-product">
         <div class="phone-product-top">
           <div class="phone-product-left">
-            <a href="#"><img src="images/products/hp-pavilion-x360.jpg" alt="HP"></a>
+            <div class="zoom-images">
+              <a href="#"><img src="images/products/hp-pavilion-x360.jpg" alt="HP"></a>
+            </div>
             <div class="phone-product-title">
               <div class="phone-title-left">
                 <span>HP Pavilion x360 ba080TU i3</span><br>
@@ -178,7 +182,9 @@
           </div>
           <div class="phone-product-right">
             <div class="phone-product-right-top">
-              <a href="#"><img src="images/products/hp-envy-13.jpg" alt="HP"></a>
+              <div class="zoom-images">
+                <a href="#"><img src="images/products/hp-envy-13.jpg" alt="HP"></a>
+              </div>
               <span class="pay">Trả góp 0%</span>
             </div>
             <div class="phone-product-right-title">
@@ -189,7 +195,9 @@
           </div> <!-- phone-product-right -->
           <div class="phone-product-right">
             <div class="phone-product-right-top">
-              <a href="#"><img src="images/products/acer-swift.jpg" alt="Acer"></a>
+              <div class="zoom-images">
+                <a href="#"><img src="images/products/acer-swift.jpg" alt="Acer"></a>
+              </div>
               <span class="pay">Trả góp 0%</span>
             </div>
             <div class="phone-product-right-title">
@@ -200,7 +208,9 @@
           </div> <!-- phone-product-right -->
           <div class="phone-product-right">
             <div class="phone-product-right-top">
-              <a href="#"><img src="images/products/ipad-6th-wifi-cellular.jpg" alt="iPad"></a>
+              <div class="zoom-images">
+                <a href="#"><img src="images/products/ipad-6th-wifi-cellular.jpg" alt="iPad"></a>
+              </div>
               <span class="pay">Trả góp 0%</span>
             </div>
             <div class="phone-product-right-title">
@@ -219,7 +229,7 @@
       </div> <!-- end hot-top -->
       <div class="products">
         <div class="phone-product-right product-child">
-          <div class="phone-product-right-top">
+          <div class="phone-product-right-top zoom-images">
             <a href="#"><img src="images/products/pin-sac-du-phong-polymer-10000mah.jpg" alt="iPad"></a>
           </div>
           <div class="phone-product-right-title">
@@ -228,7 +238,7 @@
           </div> <!-- phone-product-right -->
         </div>
         <div class="phone-product-right product-child">
-          <div class="phone-product-right-top">
+          <div class="phone-product-right-top zoom-images">
             <a href="#"><img src="images/products/loa-bluetooth-mifa.jpg" alt="loa"></a>
             <span class="pay">Giảm 35%</span>
           </div>
@@ -239,7 +249,7 @@
           </div> <!-- phone-product-right -->
         </div>
         <div class="phone-product-right product-child">
-          <div class="phone-product-right-top">
+          <div class="phone-product-right-top zoom-images">
             <a href="#"><img src="images/products/ipad-6th-wifi-cellular.jpg" alt="iPad"></a>
             <span class="pay">Trả góp 0%</span>
           </div>
@@ -249,7 +259,7 @@
           </div> <!-- phone-product-right -->
         </div>
         <div class="phone-product-right product-child">
-          <div class="phone-product-right-top">
+          <div class="phone-product-right-top zoom-images">
             <a href="#"><img src="images/products/the-nho-microsd-8gb.jpg" alt="the nho"></a>
             <span class="pay">Giảm 25%</span>
           </div>
@@ -260,7 +270,7 @@
           </div> <!-- phone-product-right -->
         </div>
         <div class="phone-product-right product-child">
-          <div class="phone-product-right-top">
+          <div class="phone-product-right-top zoom-images">
             <a href="#"><img src="images/products/tai-nghe-chup-tai-kanen-ip.jpg" alt="tai nghe"></a>
             <span class="pay">Giảm 35%</span>
           </div>
