--- a/app/views/static_pages/phone.html.erb
+++ b/app/views/static_pages/phone.html.erb
@@ -1,5 +1,5 @@
-<% provide :title, "Điện thoại, smartphone chính hãng" %>
-<h1 class="increase_margin_top">Điện thoại</h1>
+<% provide :title, t("static_pages.phone.title") %>
+<h1 class="increase_margin_top"><%= t "static_pages.phone.title" %></h1>
 <p>
   Duis cupidatat cillum in magna qui amet esse enim non. Ex enim id duis id Lorem 
   commodo nostrud laborum consectetur occaecat. Id excepteur est excepteur ipsum nostrud 
