--- a/app/views/static_pages/tablet.html.erb
+++ b/app/views/static_pages/tablet.html.erb
@@ -1,5 +1,5 @@
-<% provide :title, "Máy tính bảng chính hãng" %>
-<h1 class="increase_margin_top">Máy tính bảng</h1>
+<% provide :title, t("static_pages.tablet.title") %>
+<h1 class="increase_margin_top"><%= t "static_pages.tablet.title" %></h1>
 <p>
   Duis cupidatat cillum in magna qui amet esse enim non. Ex enim id duis id Lorem 
   commodo nostrud laborum consectetur occaecat. Id excepteur est excepteur ipsum nostrud 
